feat: add email check
