# docs/swagger.json
@@ -110,12 +110,12 @@
                 "summary": "刷新token",
                 "operationId": "refresh_token",
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                          "$ref": "#/definitions/models.Token"
-                        }
-                    },
+                  "200": {
+                    "description": "OK",
+                    "schema": {
+                      "$ref": "#/definitions/models.Token"
+                    }
+                  },
                   "400": {
                     "description": "Bad Request",
                     "schema": {
@@ -160,31 +160,62 @@
           "produces": [
             "application/json"
           ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "邮件注册",
-                "parameters": [
-                    {
-                        "description": "User",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
+          "tags": [
+            "User"
+          ],
+          "summary": "邮件注册",
+          "parameters": [
+            {
+              "description": "User",
+              "name": "user",
+              "in": "body",
+              "required": true,
                         "schema": {
                             "$ref": "#/definitions/controllers.UserSignUpRequest"
                         }
                     }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Resp"
-                        }
-                    }
-                }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/models.Resp"
+              }
             }
+          }
         }
+      },
+      "/verify_email": {
+        "get": {
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "User"
+          ],
+          "summary": "邮箱验证",
+          "parameters": [
+            {
+              "type": "string",
+              "description": "info",
+              "name": "info",
+              "in": "query",
+              "required": true
+            }
+          ],
+          "responses": {
+            "302": {
+              "description": "redirect to main page",
+              "schema": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      }
     },
     "definitions": {
         "controllers.UserSignUpRequest": {
